# libgig

./: CMakeLists.txt  ChangeLog  NEWS  README  configure.ac  libgig.spec.in
debian/: Makefile.am  changelog  control  copyright
src/: DLS.cpp  DLS.h  Serialization.cpp  Serialization.h  gig.cpp  gig.h  helper.h
src/tools/: gigdump.cpp
win32/: libgig.dev.in
